--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/google.png":["assets/google.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/google.png":["assets/google.png"],"assets/icon.png":["assets/icon.png"],"assets/translations/en.json":["assets/translations/en.json"],"assets/translations/hy.json":["assets/translations/hy.json"],"assets/translations/ru.json":["assets/translations/ru.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
